--- a/css/main.css
+++ b/css/main.css
@@ -1,36 +1,24 @@
-/*reset de los p y m*/
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
+}
+p-1 m-1 {
+    margin: 2em !important;
+    padding: 2em!important;
+}
+/*estilo-imagen*/
+.imagen-oferta {
+    text-align: center;
+}
+footer {
     
-}
-/*p al lado de hover*/
-.parrafo-div {
-    margin: 20px;
-    font-size: small;
+    color: darkblue;
+    font-size: 40px;
     font-family: 'Courier New', Courier, monospace;
-    background-color: rgba(0, 191, 255, 0.39);
-}
-.wrapper {
-    font-size: 1em;
-    width: 25vw;
-    height: 25vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.caja {
-    background-color: rgba(255, 20, 145, 0.582);
-    height: 100px;
-    width: 100px;
-    transition-delay: .5s;
-    transition-duration: .5s;
-    transition-timing-function: ease ;
-}
-.caja:hover {
-    background-color: rgba(137, 43, 226, 0.445);
-    transform: rotate(50deg);
-   
+    font-weight: bolder;
+    text-align: center;
+    padding: 60px 10px 60px 10px;
+    background-color:lightcyan
 }
 .contenido {
     background-color: aqua;
@@ -46,6 +34,11 @@ border: solid 1em green;
 text-align: center;
 font-size: 3em;
 }
+.div-input {
+    margin: 20px 60px 20px 60px;
+    padding: 20px 60px 20px 60px;
+    background-color:beige;
+}
 .contenedor {
     height:300px;
     background-color:bisque;
@@ -59,317 +52,55 @@ font-size: 3em;
     "main  main main"
     "div div div"
     "footer footer footer";
-
-    
 }
-.contenedor div {
-   margin-left: 10px ;
-   margin-right: 10px;
-
-    padding: 5px;
-    background-color: blueviolet;
-    border:solid 1px red
-} 
-.item-a {
-   grid-area: header;
-   font-size: 2em;
-   
-} 
-.item-b {
-    grid-area: main;
-    font-size: 2em;
-  color: brown;
-}
-.item-c {
-    grid-area: div;
-    
-
-}
-.item-d {
-    grid-area: nav;
-    
-
-}
-.item-e {
-    grid-area: footer;
-    
-
-}
-.item-f {
-    grid-area: footer;
-    margin: 10px;
-
-}
-
-
-/* estilo de todos los h1*/
-h1 {
-    height: 60px;
-    width: 800px;
-    color: black;
-    font-style:normal;
-    font-weight: bolder;
-    font-size: 3em;
-    display: flex;
-    justify-content:center  ;
-
-
-    text-align: center;
-}
-header nav a {
-    
-    text-decoration: none;
-    color: black;
-
-    font-size: 2em;
-}
-/*texto anterior al nav*/
-h2 {
-    height: 50px;
-    font-size: 3em;
-    font-style: normal;
-    font-weight:lighter;
-    color: black;
-    text-align: center;
-    
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-    margin-right: 10px;
-}
-/* forma del nav*/
-header  {
-     display: flex;
-     justify-content:space-evenly;
-     background-color:darksalmon;
-     padding: 10px;
-     height: 105px;
-     align-items: center;
-   flex-direction: row;
-   
-   
-   
-   
-}
-
-
-.item-2 {
-
-    background-color: blueviolet;
-}
-.item-3 {
-    background-color: brown;
-
-}
-.item-4 {
-    background-color: darkblue;
-
-}
-.item-5 {
-
-    background-color: yellowgreen;
-}
-
-
-.imagen-repeat {
-    height: 200px;
-    background-image: url("../imagenes/descarga.jfif");
-    background-repeat: repeat;
-    background-size: contain;
-}
-.imagen-index p {
-    display:flex;
-    flex-direction: row;
-    
-    height: 300px;
-    background-color: aquamarine;
-    font-size: 40px;
-    margin: 10px;
-    border: dashed 1px brown;
-    text-align: left;
-    
-}
-div p {
-    height: 150px;
-    
-    font-size: 50px;
-}
-footer {
-    
-    color: darkblue;
-    font-size: 40px;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bolder;
-    text-align: center;
-    padding: 60px 10px 60px 10px;
-    background-color:lightcyan
-}
-.div-input {
-    margin: 20px 60px 20px 60px;
-    padding: 20px 60px 20px 60px;
-    background-color:beige;
-    
-    
-}
-/*estilo-lista*/
-.lista-ordenada {
-   
-    padding: 30px 50px 30px 50px;
-    margin: 10px 50px 10px 30px;
-    background-color: darkkhaki;
-    list-style-type: none; 
-    font-weight: bold;
-    font-size: 50px;
-
-}
-/*estilo-imagen*/
-#imagen-oferta {
-    text-align: center;
-    
-}
-main img {
-    padding: 15px 15px 15px 650px;
-    
-    
-
-}
-/*padre-hijo*/
-main h2 {
-    text-align: center;
-    font-size: 50px;
-    font-weight: bolder;
-}
-table {
-    font-size:70px ;
-    text-align: center;
-    
-}
-.estilo-tabla {
-    background-color: lavender;
-    font-size: 70px;
-
-}
-.parrafo-estilo {
- border: blueviolet;
- border-style: dashed;
- border-width: 30px;
- border-radius: 5px;
-}
-.lista-ordenada {
-    text-align: center;
-}
-.calzado {
-    text-align: center;
-}
-.imagen-index {
-    
-    
-   
-    display:flex;
-    flex-direction: row;
-
-}
-/* media mas chico*/
-@media screen and  (max-width:320px) {
-
- h1 {
-    width: 5px;
-    margin: 1px; 
-    display: flex;
-    flex-direction: row;
-    font-size: 1em;
-    justify-content: space-evenly;
-    
-    
-}
-/*imagen header*/
-.logo-media {
-    display: none
-}
-/*tamano quienes somos*/
-h2 {
-    display: flex;
-    font-size: 2em;
-    align-items: center;
-    background-color:rgba(184, 135, 11, 0.418);
-
-
-}
-
-/*navegador-header */
-header nav {
-    font-weight: 1px;
-    font-size: 7px;
-    display: flex;
-     justify-content:center;
-     background-color:darksalmon;
-     padding: 10px;
-     height: 10px;
-     flex-direction: column;
+    .contenedor div {
+        margin-left: 10px ;
+        margin-right: 10px;
      
-    
-   
-}
-.imagen-index p {
-    display:flex;
-    flex-direction: row;
-    
-    height: 5em;
-    background-color: aquamarine;
-    font-size: 1em;
-    margin: 10px;
-    border: dashed 1px brown;
-    text-align: left;
+         padding: 5px;
+         background-color: blueviolet;
+         border:solid 1px red
+    }
 
-}
-/*paginas-footer*/
-footer {
-    height: 150px;
-    width: 100px;
-    font-size: 1em;
-    display: flex;
-    flex-direction: column;
-    margin: 5em;
-    justify-content: space-around;
-    align-items:center;
-}
-.imagen-repeat {
-    height: 1px;
-    background-image: url("../imagenes/descarga.jfif");
-    background-repeat: repeat;
-    background-size: contain; 
+.item-a {
+    grid-area: header;
+    font-size: 2em;
     
-}
+ } 
+ .item-b {
+     grid-area: main;
+     font-size: 2em;
+   color: brown;
+ }
+ .item-c {
+     grid-area: div;
+     
+ 
+ }
+ .item-d {
+     grid-area: nav;
+     
+ 
+ }
+ .item-e {
+     grid-area: footer;
+     
+ 
+ }
+ .item-f {
+     grid-area: footer;
+     margin: 10px;
+ 
+ }
 
 
-.imagen-repeat p {
-    font-size: 1em;
-    height: 10px;
-    
-}
-.imagen-index {
-    display:none;
-
-}
-.div-input {
+/* media mas chico*/
+@media screen and  (max-width:320px) 
+{
+  .div-input {
     height: 750px;
     margin: 20px ;
     padding: 20px ;
     background-color:rgba(153, 50, 204, 0.452);
-     
-}
-.footer-contacto {
-    height: 150px;
-    width: 150px;
-    font-size: 1em;
-    display: flex;
-    
-    flex-direction:column-reverse;
-    margin: 5em;
-    justify-content: space-around;
-    align-items:center;
-    
-}
+ }
 }
